Fix FUNDING.yml - use correct GitHub username KDF-dev

--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,4 @@
 # These are supported funding model platforms
 
-# github: # Uncomment and add username if enrolled in GitHub Sponsors
+github: [KDF-dev]
 custom: ["https://www.buymeacoffee.com/kdftalent"]
