Prepare JOSS submission: restructure paper and add PDF workflow
  - Update authorship: SC Vollmer (sole author), York University
  - Move rglenn to contributors (PCB layout 2019-2020)
  - Fix bibliography errors and add missing references
  - Add mandatory JOSS 2026 sections
  - Add AI Usage Disclosure per 2026 policy
  - Add GitHub Actions workflow for PDF generation

--- a/.gitignore
+++ b/.gitignore
@@ -161,6 +161,15 @@ test-results/
 *.test.log
 
 # ==========================================
+# SUBMISSION & REVIEW FILES
+# ==========================================
+# JOSS submission analysis and draft work
+JOSS_SUBMISSION_ANALYSIS.md
+*_ANALYSIS.md
+*_DRAFT.md
+*_REVIEW.md
+
+# ==========================================
 # MISCELLANEOUS
 # ==========================================
 # Backups
