Remove local documentation files from tracking

--- a/.gitignore
+++ b/.gitignore
@@ -207,6 +207,11 @@ paper.pdf
 # Temporary/working documentation files
 docs/text-npm.txt
 docs/osc_nsamespace
+docs/_excerpttactile.pdf
+docs/_hapticscontext-briefexcerpt-github.png
+docs/index.html
+docs/index.md
+docs/OSHWA_CERTIFICATION.md
 
 # ==========================================
 # ARDUINO IDE
